feat: eslint config + FastAPI client stubs generation + React Query

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --fix .",
+    "generate-client": "openapi --input http://localhost:8000/openapi.json --output ./src/fastapi-client --client fetch"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
+    "eslint": "^8.38.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "openapi-typescript-codegen": "^0.24.0",
+    "typescript": "^5.0.4",
     "vite": "^4.1.0"
   }
 }
