--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "generate-client": "openapi --input http://localhost:8000/openapi.json --output ./src/fastapi-client --client fetch"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.3",
+    "@trpc/server": "^10.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -27,6 +30,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "openapi-typescript-codegen": "^0.24.0",
+    "prisma": "^4.13.0",
     "typescript": "^5.0.4",
     "vite": "^4.1.0"
   }
