--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.3",
+    "@trpc/client": "^10.20.0",
     "@trpc/server": "^10.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
