refactor: move Prisma/tRPC out of frontend dir

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "../backend/node/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
